# mastercard-test

./: README.md  main.py  pyproject.toml  technical_test_Ming_Li.ipynb
